...
                            </tableView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UM9-4r-Ir8">
                                <rect key="frame" x="0.0" y="64" width="375" height="52"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UKS-tC-gUe">
                                        <rect key="frame" x="10" y="10" width="315" height="32"/>
                                        <accessibility key="accessibilityConfiguration" label="TextField"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CNv-eP-o84">
                                        <rect key="frame" x="335" y="11" width="30" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="Add"/>
                                        <state key="normal" title="Add"/>
                                        <connections>
                                            <action selector="add" destination="BYZ-38-t0r" eventType="touchUpInside" id="dBF-ni-KkB"/>
                                        </connections>
                                    </button>
                                </subviews>
...
